<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linealayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/iv_edit_questionitem"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/iv_delete_questionitem"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:src="@drawable/ic_delete" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_question_questionitem"
        android:layout_width="@dimen/margin_null"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:textColor="@android:color/black"
        tools:text="Capital of India"
        android:textSize="@dimen/text_extra_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linealayout1">


    </TextView>


    <ImageView
        android:id="@+id/iv_questionitem"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/dotted"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question_questionitem" />


    <LinearLayout

        android:id="@+id/ll_questionitems"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_questionitem">

        <TextView
            android:id="@+id/tv1_questioniten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large"
            tools:text="@string/option1" />

        <TextView
            android:id="@+id/tv2_questionitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large"
            tools:text="@string/option2"

            />

        <TextView
            android:id="@+id/tv3_questionitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large"
            tools:text="@string/option3"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_correcr_questionitem"
        android:layout_width="@dimen/margin_null"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_questionitems" />
</androidx.constraintlayout.widget.ConstraintLayout>